[package]
name = "drift-liquidator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "*"
solana-sdk = "*"
anchor-client = "*"
anchor-lang = "0.16.2"
rayon = "1.5.1"
bs58 = "*"
spl-token = "*"
solana-transaction-status = "*"
hex = "*"
clearing-house = { git="https://github.com/drift-labs/protocol-v1.git", features=["no-entrypoint", "mainnet-beta"] }